Infrastructure/k8s/ecosystem-web/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecosystem-web
  namespace: ecosystem
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - ecosystemfx.net
        - www.ecosystemfx.net
      secretName: ecosystem-web-tls
  rules:
    - host: ecosystemfx.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecosystem-web
                port:
                  number: 80
    - host: www.ecosystemfx.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecosystem-web
                port:
                  number: 80
